--- a/Language/JS/继承.md
+++ b/Language/JS/继承.md
@@ -192,7 +192,6 @@ console.log(cat instanceof Cat);    // true
 ```
 
 特点：
-
 1. 弥补了方式2的缺陷，可以继承实例属性/方法，也可以继承原型属性/方法
 2. 既是子类的实例，也是父类的实例
 3. **不存在引用属性共享问题**
@@ -200,7 +199,6 @@ console.log(cat instanceof Cat);    // true
 5. 函数可复用
 
 缺点：
-
 1. 调用了两次父类构造函数，生成了两份实例（子类实例将子类原型上的那份屏蔽了）
 
 ## 6、寄生组合继承
@@ -271,7 +269,7 @@ console.log(cat instanceof Animal); // true
 console.log(cat instanceof Cat);    //true
 ```
 
-在实际应用中。
+在实际应用中, 上面说的前六种继承，基本不怎么会用到，现在基本上都是使用`extends`继承实现。对于继承的关注
 
 ## 总结
 7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承。
@@ -280,6 +278,7 @@ console.log(cat instanceof Cat);    //true
 
 参考：
 - [JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
+- [Class 的继承](https://es6.ruanyifeng.com/#docs/class-extends)
 
 
 
