--- a/Language/JS/运算符.md
+++ b/Language/JS/运算符.md
@@ -24,7 +24,7 @@ Object.is(NaN , NaN)  // true
 NaN === NaN  // false
 ```
 
-![](/assets/===.png)
+![===](/assets/===.png)
 
 ### 隐式转换
 
@@ -136,18 +136,23 @@ NaN
 运算过程注意一下几点：
 
 - **多个数字和数字字符串混合运算时，跟操作数的位置有关**
+  
   ```js
   console.log(2 + 1 + '3'); // '33'
   console.log('3' + 2 + 1); //'321'
   ```
+
 - **数字字符串之前存在数字中的正负号(+/-)时，会被转换成数字，同样，可以在数字前添加`''`，将数字转为字符串**
+  
   ```js
   console.log(typeof '3'); // string
   console.log(typeof +'3'); //number
   console.log(typeof 3); // number
   console.log(typeof (''+3)); //string
   ```
+
 - **对于运算结果不能转换成数字的，将返回 `NaN`**
+  
   ```js
   consol.log('a' * 'sd'); //NaN
   console.log('A' - 'B'); // NaN
