--- a/Language/JS/操作符.md
+++ b/Language/JS/操作符.md
@@ -6,7 +6,7 @@
 
 `typeof`操作符返回一个字符串，表示未经计算的操作数的类型。
 
-- `typeof`运算符，判断数据类型，对于基本类型，返回基本类型，对于引用类型的，不管哪一种引用类型，都返回`'object'`
+- `typeof`运算符，判断数据类型，对于基本类型，返回基本类型，对于引用类型的，不管哪一种引用类型，都返回`'object'`。
 - `typeof` 除了`null` 返回`'object'`，和函数返回`'function'`，其他都能正确返回，凡是引用类型返回都是`'object'`。
 
 ### `typeof`对`new`一个构造函数生成内容的判断需要特别注意
