--- a/Language/JS/节流与防抖.md
+++ b/Language/JS/节流与防抖.md
@@ -1,39 +1,32 @@
 # JS节流与防抖
+
 JS节流和防抖是说的非常多一个话题，不论什么时候，
-- 只要是监听类似scroll滚动事件，一般都要加上节流，
-- 当我们频繁的操作某个DOM时，比如input框输入时，一般要加上防抖。
 
 不然会来带很多性能问题。
 
-下面是节流和防抖的一个图示：
+## 节流
 
-![](https://user-gold-cdn.xitu.io/2019/1/25/168848565d65c88b?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+实现函数节流throttle的方法一般有两种:
 
-## 函数节流
-当持续触发某一个函数时，保证触发函数一定时间内只执行一次。
-
-![](https://user-gold-cdn.xitu.io/2018/6/10/163e9f9241c653a8?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
-
-实现函数节流throttle的方法一般有两种，
-- 定时器 setTimeOut
-- 时间戳 new Date（）
+- 定时器`setTimeOut`
+- 时间戳`new Date()`
 
 定时器方式
+
 ```js
 function throttle(fn, time) {
-    let timer;
-    return function(){
-        const args = arguments;
-        const _that = this;
-        if(timer) {
-            return;
-        } 
-        timer = setTimeOut(() => {
-            fn.call(_that, args);
-            timer = null;
-        }, time);
-        
-    }
+  let timer;
+  return function(){
+    const args = arguments;
+    const _that = this;
+    if(timer) {
+      return;
+    } 
+    timer = setTimeOut(() => {
+      fn.call(_that, args);
+      timer = null;
+    }, time);
+  }
 }
 ```
 
@@ -44,36 +37,30 @@ function throttle(fn, time) {
 ```js
 // 简单的节流函数 wait的延时保证程序的健壮性
 function throttle (func, mustRun, wait) {
-    let timeout,
-        startTime = new Date();
-    return function () {
-        let that = this,  
-            args = arguments,
-            curTime = new Date();
-        clearTimeout(timeout);
-        // 如果达到了时间间隔，触发 handler
-        // 如果没有，设置一个延时，假设为最后一次
-        if (curTime - startTime >= mustRun) {
-            func.apply(that, args);
-            startTime = curTime;
-        } else {
-            // 没达到触发间隔，重新设定定时器 ，
-            // 保证不丢失最后一次触发，如果中间再触发，会在之前被clear掉
-            timeout = setTimeout(func, wait);
-        }
-    };
+  let timeout,
+  startTime = new Date();
+  return function () {
+    let that = this,  
+      args = arguments,
+      curTime = new Date();
+    clearTimeout(timeout);
+    // 如果达到了时间间隔，触发 handler
+    // 如果没有，设置一个延时，假设为最后一次
+    if (curTime - startTime >= mustRun) {
+      func.apply(that, args);
+      startTime = curTime;
+    } else {
+      // 没达到触发间隔，重新设定定时器 ，
+      // 保证不丢失最后一次触发，如果中间再触发，会在之前被clear掉
+      timeout = setTimeout(func, wait);
+    }
+  };
 }
 ```
 
-
-## 函数防抖
+## 防抖
 
 当持续触发事件时，一定时间段内没有再触发事件，事件处理函数才会执行一次，如果设定的时间到来之前，又一次触发了事件，就重新开始延时。
-
-
-![](https://user-gold-cdn.xitu.io/2018/6/10/163e9f9241e349d2?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
-
-
 
 ```js
 function debounce(fn, wait) {
@@ -82,11 +69,11 @@ function debounce(fn, wait) {
     var context = this
     var args = arguments
     if (timer) {
-        clearTimeout(timer);
-        timer = null;
+      clearTimeout(timer);
+      timer = null;
     }
     timer = setTimeout(function () {
-        fn.apply(context, args)
+      fn.apply(context, args)
     }, wait)
   }
 }
@@ -100,11 +87,6 @@ setInterval(debounce(fn,500),1000) // 第一次在1500ms后触发，之后每100
 setInterval(debounce(fn,2000),1000) // 不会触发一次（我把函数防抖看出技能读条，如果读条没完成就用技能，便会失败而且重新读条）
 ```
 
-
 ## 参考
+
 - [防抖节流](https://juejin.im/entry/5b1d2d54f265da6e2545bfa4)
-
-
-
-
-
