--- a/Language/JS/同源策略到前端跨域.md
+++ b/Language/JS/同源策略到前端跨域.md
@@ -365,8 +365,8 @@ iframe接受消息:
 
 ```js
 window.addEventListener('message',function(e){
-    if(e.source!=window.parent) return;//若消息源不是父页面则退出
-      //TODO ...
+  if(e.source!=window.parent) return;//若消息源不是父页面则退出
+    //TODO ...
 });
 ```
 
@@ -394,41 +394,41 @@ window.addEventListener('message',function(e){
 1. 在需要通信的文档中(父窗口和iframe们), 都确保引入`MessengerJS`库
 2. 每一个文档(`document`), 都需要自己的`Messenger`与其他文档通信. 即每一个`window`对象都对应着一个, 且仅有一个`Messenger`对象, 该`Messenger`对象会负责当前`window`的所有通信任务. 每个`Messenger`对象都需要唯一的名字, 这样它们才可以知道跟谁通信.
 
-    ```js
-    // 父窗口中 - 初始化Messenger对象
-    var messenger = new Messenger('Parent'); 
-    // iframe中 - 初始化Messenger对象
-    var messenger = new Messenger('iframe1'); 
-    // 多个iframe, 使用不同的名字
-    var messenger = new Messenger('iframe2'); 
-    ```
+  ```js
+  // 父窗口中 - 初始化Messenger对象
+  var messenger = new Messenger('Parent'); 
+  // iframe中 - 初始化Messenger对象
+  var messenger = new Messenger('iframe1'); 
+  // 多个iframe, 使用不同的名字
+  var messenger = new Messenger('iframe2'); 
+  ```
 
 3. 在发送消息前, 确保目标文档已经监听了消息事件.
 
-    ```js
-    // iframe中 - 监听消息
-    // 回调函数按照监听的顺序执行
-    messenger.listen(function(msg){    alert("收到消息: " + msg);});
-    ```
+  ```js
+  // iframe中 - 监听消息
+  // 回调函数按照监听的顺序执行
+  messenger.listen(function(msg){    alert("收到消息: " + msg);});
+  ```
 
 4. 父窗口想给iframe发消息, 它怎么知道iframe的存在呢? 添加一个消息对象吧.
 
-    ```js
-    // 父窗口中 - 添加消息对象, 明确告诉父窗口iframe的window引用与名字
-    messenger.addTarget(iframe1.contentWindow, 'iframe1'); 
-    // 父窗口中 - 可以添加多个消息对象
-    messenger.addTarget(iframe2.contentWindow, 'iframe2'); 
-    ```
+  ```js
+  // 父窗口中 - 添加消息对象, 明确告诉父窗口iframe的window引用与名字
+  messenger.addTarget(iframe1.contentWindow, 'iframe1'); 
+  // 父窗口中 - 可以添加多个消息对象
+  messenger.addTarget(iframe2.contentWindow, 'iframe2'); 
+  ```
 
 5. 一切ready, 发消息吧~ 发送消息有两种方式. (以父窗口向iframe发消息为例)
 
-    ```js
-    // 父窗口中 - 向单个iframe发消息
-    messenger.targets['iframe1'].send(msg1);
-    messenger.targets['iframe2'].send(msg2); 
-    // 父窗口中 - 向所有目标iframe广播消息
-    messenger.send(msg); 
-    ```
+  ```js
+  // 父窗口中 - 向单个iframe发消息
+  messenger.targets['iframe1'].send(msg1);
+  messenger.targets['iframe2'].send(msg2); 
+  // 父窗口中 - 向所有目标iframe广播消息
+  messenger.send(msg); 
+  ```
 
 ### 总结
 
@@ -464,7 +464,7 @@ window.addEventListener('message',function(e){
 
 禁止浏览器跨域安全检查（这里以chrome为例）
 
-```
+```bash
 "C:\Users\UserName\AppData\Local\Google\Chrome\Application\chrome.exe" --disable-web-security --user-data-dir
 ```
 
