--- a/Language/JS/节流与防抖.md
+++ b/Language/JS/节流与防抖.md
@@ -38,11 +38,11 @@ function throttle(fn, time) {
 // 简单的节流函数 wait的延时保证程序的健壮性
 function throttle (func, mustRun, wait) {
   let timeout,
-  startTime = new Date();
+  startTime = new Date().getTime();
   return function () {
     let that = this,  
       args = arguments,
-      curTime = new Date();
+      curTime = new Date().getTime();
     clearTimeout(timeout);
     // 如果达到了时间间隔，触发 handler
     // 如果没有，设置一个延时，假设为最后一次
@@ -58,6 +58,11 @@ function throttle (func, mustRun, wait) {
 }
 ```
 
+测试
+
+```js
+```
+
 ## 防抖
 
 当持续触发事件时，一定时间段内没有再触发事件，事件处理函数才会执行一次，如果设定的时间到来之前，又一次触发了事件，就重新开始延时。
@@ -67,24 +72,27 @@ function debounce(fn, wait) {
   var timer = null;
   return function () {
     var context = this
-    var args = arguments
-    if (timer) {
-      clearTimeout(timer);
-      timer = null;
-    }
+    var args = arguments;
+    clearTimeout(timer);
     timer = setTimeout(function () {
       fn.apply(context, args)
-    }, wait)
+    }, wait);
   }
 }
+```
 
-var fn = function () {
-  console.log('boom')
+测试：设置一个定时器，每10ms执行一次，1s后关闭。 `debounce`防抖时间设置为500ms，则函数应该在1.5s后执行
+
+```js
+console.time('debounce')
+let fn = function () {
+  console.timeEnd('debounce', ‘’)
 }
 
-setInterval(debounce(fn,500),1000) // 第一次在1500ms后触发，之后每1000ms触发一次
-
-setInterval(debounce(fn,2000),1000) // 不会触发一次（我把函数防抖看出技能读条，如果读条没完成就用技能，便会失败而且重新读条）
+let timer1 = setInterval(debounce(fn, 500, true), 10);
+let timer2 = setTimeout(() => { clearInterval(timer1) }, 1000);
+// 函数被执行
+// debounce: 1512.098ms
 ```
 
 ## 参考
