--- a/Language/JS/节流与防抖.md
+++ b/Language/JS/节流与防抖.md
@@ -61,6 +61,7 @@ function throttle (func, mustRun, wait) {
 测试
 
 ```js
+let timer1 = setInterval(throttle(fn, 500), 10); // 每500ms执行一次
 ```
 
 ## 防抖
@@ -94,7 +95,3 @@ let timer2 = setTimeout(() => { clearInterval(timer1) }, 1000);
 // 函数被执行
 // debounce: 1512.098ms
 ```
-
-## 参考
-
-- [防抖节流](https://juejin.im/entry/5b1d2d54f265da6e2545bfa4)
