--- a/Computer/Network/同源策略到前端跨域.md
+++ b/Computer/Network/同源策略到前端跨域.md
@@ -214,7 +214,7 @@ img.src = 'http://www.exapmle.com/test?name=aoao';
 
 ### JSONP跨域
 
-JSONP是 JSON with paddig的简写，是JSON的一种新方法，由两部分组成
+JSONP是 JSON with padding的简写，是JSON的一种新方法，由两部分组成
 
 - 回调函数：当响应到来时应该在页面中调用的函数。
 - 数据：传入回调函数中的JSON数据
